Finished implementation of Glulx assembler and linker, which will replace glulxa in the compiler toolchain, to allow for separate compilation of individual source files. Basics work, but more extensive testing with the C compiler is necessary.

--- a/glulxas/TODO.txt
+++ b/glulxas/TODO.txt
@@ -1,8 +1,8 @@
 gnuas:
-  - build import table
-  - build xref table
-  - write import table
-  - write xref table
+  - more extensive testing
+  - RAM-relative addressing?
 
 gnuld:
-  - implement it :-)
+  - more extensive testing
+  - RAM-relative addressing?
+  - support for static archives (ar?)
